<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/home"
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_myntra"/>
    <item
        android:title="@string/categories"
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_baseline_category_24"/>
    <item
        android:title="@string/studio"
        android:id="@+id/nav_studio"
        android:icon="@drawable/ic_baseline_live_tv_24"/>
    <item
        android:title="@string/explore"
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_baseline_explore_24"/>
    <item
        android:title="@string/profile"
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_24"/>
</menu>