<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Explore">
   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/explore_in_myntra"
               android:textStyle="bold"
               android:textSize="15sp"
               android:layout_marginStart="10dp"
               android:layout_marginTop="15dp"
               android:padding="15dp"

               />
       </LinearLayout>
   </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_favorite_24"
                    android:text="@string/myntra_insider"
                    android:drawablePadding="10dp"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_ac_unit_24"
                android:text="@string/myntra_luxe"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_card_giftcard_24"
                android:text="@string/gift_cards"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_shopping_bag_24"
                android:text="@string/myntra_mall"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"

                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_shopping_bag_24"
                android:text="@string/play_and_earn"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_forward_10_24"
                android:text="@string/myntra_move"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_forward_10_24"
                android:text="@string/refer_and_earn"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_qr_code_scanner_24"
                android:text="@string/scan_for_coupon"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_ac_unit_24"
                android:text="@string/myntra_fashion_superstar"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_baseline_forward_10_24"
                android:text="@string/myntra_masterclass"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            app:labelVisibilityMode="labeled"
            app:itemIconTint=" #E72744"
            app:itemTextColor="#E72744"
            app:menu="@menu/bottom_nav"
            />


    </RelativeLayout>

</LinearLayout>