<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Profile">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:padding="10dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileCard">


        <LinearLayout
            android:id="@+id/profileLoginSignUpCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView

                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profilePicCard">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              android:orientation="horizontal">
              <ImageView
                  android:layout_width="130dp"
                  android:layout_height="130dp"
                  android:src="@drawable/ic_baseline_person_24"
                  />

              <Button
                  android:id="@+id/btnLoginSignUp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="Login/SignUp"
                  android:gravity="center"
                  android:layout_marginHorizontal="10dp"
                  android:textSize="20sp"
                  android:layout_marginTop="40dp"
                  android:background="#FF1493"
                  android:textColor="#FFFFFF"
                  />
          </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView

                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orders"
                    android:drawableLeft="@drawable/ic_baseline_bookmark_border_24"
                    android:drawablePadding="20dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:textSize="20sp"
                    />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_center"
                        android:drawableLeft="@drawable/ic_baseline_call_24"
                        android:drawablePadding="20dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wishlist"
                        android:drawableLeft="@drawable/ic_baseline_favorite_24"
                        android:drawablePadding="20dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        android:textSize="20sp"
                        />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_for_coupon"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:drawableLeft="@drawable/ic_baseline_qr_code_scanner_24"
                    android:padding="10dp"
                    android:drawablePadding="20dp"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refer_and_earn"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:drawableLeft="@drawable/ic_baseline_favorite_24"
                    android:padding="10dp"
                    android:drawablePadding="20dp"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>
            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:id="@+id/card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:padding="10dp"
                        android:text="@string/faqs"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:padding="10dp"
                        android:text="@string/about_us"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:padding="10dp"
                        android:text="@string/terms_of_use"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:padding="10dp"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>



    </ScrollView>

</LinearLayout>